--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -20,7 +20,7 @@
 <!--        android:layout_height="match_parent"-->
 <!--        android:layout_gravity="start"-->
 <!--        android:fitsSystemWindows="true"-->
-<!--        app:headerLayout="@layout/nav_header_dashboard"-->
+<!--        app:headerLayout="@layout/nav_header_admin_dashboard"-->
 <!--        app:menu="@menu/activity_dashboard_drawer" />-->
 
 <!--</androidx.drawerlayout.widget.DrawerLayout>-->
@@ -46,12 +46,12 @@
                 android:layout_height="match_parent" />
 
             <com.google.android.material.navigation.NavigationView
-                android:id="@+id/nav_view"
+                android:id="@+id/nav_view_admin"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 android:fitsSystemWindows="true"
-                app:headerLayout="@layout/nav_header_dashboard"
+                app:headerLayout="@layout/nav_header_admin_dashboard"
                 app:menu="@menu/activity_dashboard_drawer" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
