--- a/app/src/main/res/layout/activity_notice_department.xml
+++ b/app/src/main/res/layout/activity_notice_department.xml
@@ -15,13 +15,15 @@
             android:id="@+id/a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="30">
 
             <com.google.android.material.textfield.TextInputEditText
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Title (max 30 char)"
+                android:hint="Title"
                 android:id="@+id/tvDeptTitle"
                 android:maxLength="30"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -32,7 +34,10 @@
             android:layout_height="30dp"
             android:layout_below="@id/a"
             android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_date_range_black_24dp"
+            android:background="@null"/>
 
         <TextView
             android:id="@+id/tvDeptDate"
@@ -40,8 +45,8 @@
             android:layout_height="wrap_content"
             android:text="Select Date"
             android:textSize="20sp"
-            android:layout_marginTop="25dp"
-            android:layout_toLeftOf="@id/ibDeptDate"
+            android:layout_marginTop="20dp"
+            android:layout_toStartOf="@id/ibDeptDate"
             android:layout_below="@id/a"/>
 
         <TextView
