--- a/app/src/main/res/layout/activity_notice_sports.xml
+++ b/app/src/main/res/layout/activity_notice_sports.xml
@@ -15,13 +15,15 @@
             android:id="@+id/g"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="30">
 
             <com.google.android.material.textfield.TextInputEditText
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Title (max 30 char)"
+                android:hint="Title"
                 android:id="@+id/tvSportsTitle"
                 android:maxLength="30"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -32,16 +34,19 @@
             android:layout_height="30dp"
             android:layout_below="@id/g"
             android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_date_range_black_24dp"
+            android:background="@null"/>
 
         <TextView
             android:id="@+id/tvSportsDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Date"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:textSize="20sp"
-            android:layout_toLeftOf="@id/ibSportsDate"
+            android:layout_toStartOf="@id/ibSportsDate"
             android:layout_below="@id/g"/>
 
         <ImageButton
@@ -49,8 +54,11 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_below="@id/ibSportsDate"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_access_time_black_24dp"
+            android:background="@null"/>
 
         <TextView
             android:id="@+id/tvSportsTime"
@@ -59,7 +67,7 @@
             android:text="Select Time"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
-            android:layout_toLeftOf="@id/ibSportsDate"
+            android:layout_toStartOf="@id/ibSportsDate"
             android:layout_below="@id/tvSportsDate"/>
 
         <TextView
