--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="60dp"
         android:iconifiedByDefault="false"
         android:queryHint="Type to search"
-        android:layout_toLeftOf="@id/ivPopup_home"/>
+        android:layout_toStartOf="@id/ivPopup_home"/>
 
     <ImageView
         android:id="@+id/ivPopup_home"
@@ -21,7 +21,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_filter_list_black_24dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -34,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="5dp"
+            android:background="#e8e8e8"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
